src/objects/loan__Organization_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>loan__Applet_Jars_Location__c</fullName>
        <label>Applet Jars Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Biometric_DB_Connection__c</fullName>
        <label>Biometric DB Connection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Check_Teller_Balance_before_EOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Teller Balance before EOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Country__c</fullName>
        <defaultValue>&quot;India&quot;</defaultValue>
        <description>MFI Country Name</description>
        <inlineHelpText>MFI Country Name</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Enable_Griaule_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Griaule Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enable_M2SYS_Biometrics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable M2SYS Biometrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enable_Teller_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Teller Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Account_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Account History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Track_Client_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Client History</label>
        <type>Checkbox</type>
    </fields>
    <label>Organization Parameters (DEPRECATED)</label>
</CustomObject>